--- a/ex.prep.gira/pom.xml
+++ b/ex.prep.gira/pom.xml
@@ -55,6 +55,13 @@
             <artifactId>modelmapper</artifactId>
             <version>2.4.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.5.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
