--- a/ex.prep.coffeeshop/src/main/resources/application.properties
+++ b/ex.prep.coffeeshop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Data Source Properties
+Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/coffee_shop_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
