--- a/my.exam/src/main/resources/application.properties
+++ b/my.exam/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_fund_exam_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/battle_ship_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 #JPA Properties
