--- a/my.retake.exam/src/main/resources/application.properties
+++ b/my.retake.exam/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 
-
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/my_retake_exam_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping_list_exam_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 #JPA Properties
